# rulea

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: pypi-publish.yml
examples/: access.rulea  run_example.py
rulea/: __init__.py  action_registry.py  cli.py  engine.py  evaluator.py  parser.py
tests/: test_engine.py
