[metadata]
name = rulea
version = 1.1.1
description = Rule-based programmable language in Python
author = tanuki276
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tanuki276/rulea
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    rulea = rulea.cli:main